# fortuneteller

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  justfile  pyproject.toml  schema.sql
.github/workflows/: ci.yml
data/seed/: README.md  countries.csv  effect_size_seed.csv  event_types.csv  instruments.csv  news_sources.csv
docs/: README.md  architecture.md  calibration-dataset.md  detection-and-calibration.md  event-polarity-and-classifier-prompts.md  m0-r-tickets.md  m0-tickets.md  m1-tickets.md  mvp-architecture.md  news-source-coverage-and-gaps.md  news-source-stack.md  roadmap.md  standardized-surprise.md  tech-stack.md  type_of_financial_markets.md
docs/data/: README.md  countries.md  effect-size-matrix.md  events.md  instruments.md  news-sources.md  platforms.md  region-segmentation.md
docs/superpowers/specs/: 2026-06-22-replay-harness-fast-dev-loop-design.md
src/fortuneteller/: __init__.py  __main__.py  config.py  db.py  models.py  seed.py
tests/: conftest.py  test_config.py  test_db.py  test_models.py  test_schema.py  test_seed.py  test_seed_data.py  test_skeleton.py  test_smoke.py
