[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortuneteller"
version = "0.0.0"
description = "Event-driven market-impact prediction & warning system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "polars",
    "duckdb",
]

[project.scripts]
fortuneteller = "fortuneteller.__main__:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fortuneteller"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
files = ["src"]
